--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,6 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:26.0.0-alpha1'
-    compile 'com.google.android.gms:play-services:9.6.1'
+    compile 'com.google.android.gms:play-services-auth:9.6.1'
 }
 apply plugin: 'com.google.gms.google-services'
